dosya yeniden düzenlendi

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-            <meta charset;="UTF-8">
+            <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Azra Karakaya - Resume</title>
             <link rel="stylesheet" href="styles/styles1.css">
@@ -83,9 +83,11 @@
                     <li><strong>Development Environments: </strong>VS Code, Jupyter Notebook.</li>
                     <li><strong>Office Tools: </strong>Microsoft Office (Word, Excel, PowerPoint).</li>
                 </ul>
+            </p>
+            <p>
                 <strong>Core Competencies:</strong>
                 <ul>
-                    <li>Effective problem-solving with strong analytical and critical thinking abilities.</ui>
+                    <li>Effective problem-solving with strong analytical and critical thinking abilities.</li>
                     <li>Team collaboration and adaptability in dynamic environments.</li>
                     <li>Logical reasoning and structured approach to algorithm design.</li>
                 </ul>
@@ -114,8 +116,9 @@
         </section>
 
         <footer>
-            <p>2025 Azra Karakaya</p>
+            <div class="footer-content">
+                <p>2025 Azra Karakaya</p>
+            </div>
         </footer>
-
     </body>
 </html>
