dosya yeniden düzenlendi

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Azra Karakaya - Resume</title>
-            <link rel="stylesheet" href="styles/styles1.css">
+            <link rel="stylesheet" href="styles/style1.css">
     </head>
     <body>
         <header>
             <div class="profile">
-                <div class="initials"></div>
+                <div class="initials">
+                    <img src="image.jpeg" width="120px" alt="Azra Karakaya">
+                </div>
                 <h1>AZRA KARAKAYA</h1>
                 <p>azrakarakaya09@gmail.com | +90 *** *** **** | Istanbul, Turkiye 34764</p>
                 <p>
-                    <strong>LinkedIn:</strong> 
-                    <a href="https://www.linkedin.com/in/azra-karakaya-595766231/">
-                        Profile
+                    <a href="https://www.linkedin.com/in/azra-karakaya-595766231/" target="_blank">
+                        <strong>LinkedIn</strong> 
                     </a>
                 </p>
                 <p>
-                    <strong>GitHub:</strong> 
-                    <a href="https://github.com/azrakarakaya1">
-                        Profile
+                    <a href="https://github.com/azrakarakaya1" target="_blank">
+                        <strong>GitHub</strong> 
                     </a>
                 </p>
             </div>
