--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="profile">
                 <div class="initials">
-                    <img src="image.jpeg" width="120px" alt="Azra Karakaya">
+                    <img src="images/image.jpeg" width="120px" alt="Azra Karakaya">
                 </div>
                 <h1>AZRA KARAKAYA</h1>
                 <p>azrakarakaya09@gmail.com | +90 *** *** **** | Istanbul, Turkiye 34764</p>
@@ -39,6 +39,11 @@
                 player dedicated to my responsibilities, planning to contribute proactively and 
                 achieve personal and professional growth in the first work experience of my career.
             </p>
+        </section>
+
+        <section class="experiences">
+            <h2>Experiences</h2>
+            <p>-</p>
         </section>
 
         <section class="education">
@@ -113,6 +118,35 @@
                 on various roles, including Public Relations (PR), Admin, and Delegate, across several 
                 MUN conferences. Recognized as a candidate for Best Delegate in DISEC as the Delegate 
                 of Japan, showing strong negotiation skills.</p>
+        </section>
+
+        <section class="projects">
+            <h2>Projects</h2>
+            <p><strong>C Language </strong>(February - March 2025)</p>
+            <p>String & Memory Manipulation Utilities</p>
+            <ul>
+                <li>ft_strcpy / ft_strncpy - Reimplemented safe string 
+                    copy functions with buffer size checks.</li>
+                <li>ft_atoi - Built parsers to convert strings to integers.</li>
+            </ul>
+            <p>Mathematical & Algorithmic Challenges</p>
+            <ul>
+                <li>ft_fibonacci - Implemented an efficient recursive Fibonacci sequence generator.</li>
+                <li>ft_sqrt - Implemented an integer square root calculator using binary search.</li>
+                <li>ft_is_prime / ft_find_next_prime - Created prime-checking and next-prime-finding algorithms.</li>
+            </ul>
+            <p>Data Structures & System Utilities</p>
+            <ul>
+                <li>ft_strjoin - Concatenated multiple strings with a separator using dynamic allocation.</li>
+                <li>ft_range / ft_ultimate_range - Generated arrays of sequential integers with malloc.</li>
+                <li>ft_convert_base - Built a tool to convert numbers between arbitrary bases (e.g., binary to hexadecimal).</li>
+            </ul>
+            <p>Other</p>
+            <ul>
+                <li>ft_putstr_non_printable - Developed a function to display non-printable characters as escape sequences.</li>
+                <li>ft_sort_params / ft_rev_params - Created command-line argument processors for sorting and reversing input.</li>
+                <li>ft_strcapitalize - Designed a utility to capitalize words in a string according to specific rules.</li>
+            </ul>
         </section>
 
         <footer>
